# UnifyMail

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOCALIZATION.md  PLUGIN_SYSTEM_ARCHITECTURE.md  README.md  SECURITY.md  book.json  package-lock.json  package.json  skills-lock.json
app/: AGENTS.md  Cargo.toml  mailsync.cmd  package-lock.json  package.json  tsconfig.json
app/.cargo/: config.toml
app/backend/: application-menu.ts  application-touch-bar.ts  application.ts  autoupdate-impl-win32.ts  autoupdate-manager.ts  config-migrator.ts  config-persistence-manager.ts  main.js  move-to-applications.ts  system-tray-manager.ts  unifymail-window.ts  window-launcher.ts  window-manager.ts  windows-taskbar-manager.ts  windows-updater.js
app/default-config/: README.md  config.json
app/frontend/: app-env.ts  calendar-utils.ts  canvas-utils.ts  compile-cache.js  default-client-helper.ts  intl.ts  mail-rules-templates.ts  mailsync-process.ts  native-notifications.ts  package-manager.ts  system-start-service.ts  theme-manager.ts
app/frontend/compile-support/: typescript.js
app/frontend/components/: account-color-bar.tsx  date-input.tsx  date-picker-popover.tsx  evented-iframe.tsx  flux-container.tsx  injected-component-set.tsx  key-commands-region.tsx  list-tabular.tsx  mail-label-set.tsx  multiselect-dropdown.tsx  notification.tsx  outline-view-item.tsx  scenario-editor-models.ts  scenario-editor-row.tsx
app/frontend/extensions/: composer-extension.ts
app/frontend/global/: unifymail-exports.d.ts
app/frontend/registries/: component-registry.ts
app/frontend/services/: autolinker.ts
app/internal_packages/: AGENTS.md
app/internal_packages/account-sidebar/: package.json
app/internal_packages/activity/: package.json
app/internal_packages/attachments/: package.json
app/internal_packages/category-mapper/: package.json
app/internal_packages/category-picker/: package.json
app/internal_packages/composer/: package.json
app/internal_packages/composer-signature/: package.json
app/internal_packages/composer-templates/: README.md  package.json
app/internal_packages/contacts/: package.json
app/internal_packages/custom-fonts/: package.json
app/internal_packages/custom-sounds/: package.json
app/internal_packages/draft-list/: package.json
app/internal_packages/events/: package.json
app/internal_packages/github-contact-card/: package.json
app/internal_packages/link-tracking/: package.json
app/internal_packages/list-unsubscribe/: package.json
app/internal_packages/main-calendar/: package.json
app/internal_packages/message-autoload-images/: package.json
app/internal_packages/message-list/: package.json
app/internal_packages/message-view-on-github/: package.json
app/internal_packages/mode-switch/: package.json
app/internal_packages/notifications/: package.json
app/internal_packages/onboarding/: package.json
app/internal_packages/open-tracking/: package.json
app/internal_packages/participant-profile/: package.json
app/internal_packages/personal-level-indicators/: package.json
app/internal_packages/phishing-detection/: README.md  package.json
app/internal_packages/preferences/: package.json
app/internal_packages/print/: package.json
app/internal_packages/remove-tracking-pixels/: package.json
app/internal_packages/screenshot-mode/: package.json
app/internal_packages/send-and-archive/: package.json
app/internal_packages/send-later/: package.json
app/internal_packages/send-reminders/: package.json
app/internal_packages/system-tray/: package.json
app/internal_packages/theme-picker/: package.json
app/internal_packages/thread-list/: package.json
app/internal_packages/thread-search/: package.json
app/internal_packages/thread-sharing/: package.json
app/internal_packages/thread-snooze/: package.json
app/internal_packages/translation/: README.md  package.json
app/internal_packages/ui-dark/: README.md  package.json
app/internal_packages/ui-darkside/: README.md  package.json
app/internal_packages/ui-less-is-more/: package.json
app/internal_packages/ui-light/: package.json
app/internal_packages/ui-taiga/: package.json
app/internal_packages/ui-ubuntu/: README.md  package.json
app/internal_packages/undo-redo/: package.json
app/internal_packages/unread-notifications/: package.json
app/internal_packages_disabled/thread-unsubscribe/: package.json
app/keymaps/: AGENTS.md
app/lang/: af.json  am.json  ar.json  az.json  be.json  bg.json  bn.json  bs.json  ca.json  ceb.json  co.json  cs.json  cy.json  da.json  de.json  el.json  en-gb.json  en.json  eo.json  es.json  et.json  eu.json  fa.json  fi.json  fr.json  fy.json  ga.json  gd.json  gl.json  gu.json  ha.json  haw.json  hi.json  hmn.json  hr.json  ht.json  hu.json  hy.json  id.json  ig.json  (+49 more)
app/mailcore/: binding.gyp  package.json
app/mailcore-rs/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  loader.js  loader.ts  package-lock.json  package.json  rustfmt.toml  tsconfig.tools.json
app/mailcore-rs/src/: imap.rs  lib.rs  provider.rs  smtp.rs  validate.rs
app/mailcore-rs/test/: smoke.js  smoke.ts
app/mailcore-rs/tests/: cross-validate-providers.js  (+4 more)
app/mailcore-wrapper/: index.js  package.json
app/mailsync/: CMakeLists.txt  build.sh
app/mailsync-rs/: Cargo.toml
app/menus/: AGENTS.md  darwin.js  linux.js  win32.js
app/spec/: AGENTS.md  action-bridge-spec.ts  autoupdate-manager-spec.ts  database-object-registry-spec.ts  linux-dnd-utils-spec.ts  list-selection-spec.ts  mail-rules-processor-spec.ts  mailbox-perspective-spec.ts  menu-manager-spec.ts  spellchecker-spec.ts  unifymail-protocol-handler-spec.ts  unifymail-test-utils.ts
app/src/: AGENTS.md  app-env.ts  config-schema.ts  ics-event-helpers.ts  linux-theme-utils.ts  mailbox-perspective.ts  mailsync-process.ts  package-manager.ts  package.ts  regexp-utils.ts  secondary-window-bootstrap.ts  sheet-toolbar.tsx  sheet.tsx
app/static/: AGENTS.md  all_licenses.html  all_licenses_preamble.html  db-migration.html  db-vacuum.html  index.html  index.js
(+796 files in other folders)
