[package]
name = "mailcore-napi-rs"
version = "0.1.0"
edition = "2021"
description = "Rust napi-rs addon for UnifyMail — provider detection and email account validation"
authors = ["UnifyMail Contributors"]

[lib]
# cdylib: produces the .node native addon for Node.js
# rlib: enables integration tests in tests/ directory to link against the crate
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "=3.8.3", features = ["napi4", "async", "tokio_rt"] }
napi-derive = "=3.5.2"
serde = { workspace = true }
serde_json = { workspace = true }
regex = "=1.12.3"
tokio = { workspace = true }

async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-platform-verifier = "0.6"
base64 = "0.22"

# CRITICAL: default-features = false prevents lettre from pulling in native-tls (OpenSSL),
# which conflicts with Electron's BoringSSL. rustls-platform-verifier uses the OS cert store
# (same verifier pattern as imap.rs). aws-lc-rs is the crypto provider matching rustls 0.23 default.
lettre = { version = "=0.11.19", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "rustls-platform-verifier",
    "aws-lc-rs",
] }
hickory-resolver = { version = "=0.25.2", features = ["tokio", "system-config"] }

[build-dependencies]
napi-build = "=2.3.1"

# Release profile settings are inherited from workspace Cargo.toml
